# agent_core

./: .gitignore  .mcp.json  CLAUDE.md  README.md  agent_core.yaml  justfile  pyproject.toml
.claude/: settings.json
docs/examples/: pepper-agent-core.yaml
docs/requirements/: pepper-handoff-writer-bugfix.md  pepper-identity-injection-size-limit.md  pepper-ios-watch-vision.md  pepper-requirements.md
docs/superpowers/plans/: 2026-04-13-file-injector-handoff-writer.md  2026-04-13-pluggable-hook-tools.md  2026-04-13-sentient-foundation.md  2026-04-14-email-cli.md
docs/superpowers/specs/: 2026-04-13-file-injector-handoff-writer-design.md  2026-04-13-pluggable-hook-tools-design.md  2026-04-13-sentient-library-design.md  2026-04-14-email-cli-design.md
memory-compiler/hooks/: pre-compact.py  session-end.py  session-start.py
memory-compiler/knowledge/: index.md  log.md
memory-compiler/knowledge/concepts/: agent-core-cli.md  agent-core-yaml-config.md  file-injector.md  handoff-writer.md  hook-tool-protocol.md  llm-error-handling-patterns.md  memory-compiler-hooks.md  memory-compiler-integration.md  parallel-code-review.md  path-derivation-patterns.md  pipeline-system.md  (+1 more)
memory-compiler/scripts/: compile.py  config.py  flush.py  lint.py  query.py
src/agent_core/: __init__.py  cli.py  models.py  transcript.py
tests/: test_cli.py  test_email_cli.py  test_email_client.py  test_file_injector.py  test_handoff_writer.py  test_models.py  test_pipeline.py  test_time_injector.py  test_transcript.py
tests/hooks/: test-handoff.md  test_hook_alpha.py  test_hook_beta.py
(+16 files in other folders)
