[project]
name = "agent-core"
version = "0.1.0"
description = "Core infrastructure for AI agents - memory, knowledge compilation, and tooling"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "python-dotenv>=1.0.0",
    "tzdata>=2024.1",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "desktop-notifier>=5.0",
    "mcp>=1.9.0",
    "agentmail>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14",
]

[project.scripts]
agent-core = "agent_core.cli:app"
agent-core-notify = "agent_core.notify.mcp_server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_core"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
